# arch.wanko.cc

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Gemfile  README.md  commit-update.rb  commit-update.sh  config.rb  submodule-diff.rb  submodule-diff.sh
.github/workflows/: middleman.yml  update-pages.yml
aur-eagletmt/: .akabei.yml  .guzuta.yml  update-dropbox.rb
aur-eagletmt/PKGBUILDs/dropbox/: PKGBUILD
aur-eagletmt/PKGBUILDs/global/: PKGBUILD
aur-eagletmt/PKGBUILDs/htop-vi/: PKGBUILD
aur-eagletmt/PKGBUILDs/jq/: PKGBUILD
aur-eagletmt/PKGBUILDs/rxvt-unicode-pixbuf/: PKGBUILD
aur-eagletmt/PKGBUILDs/tmux-cjkwidth/: PKGBUILD  wcwidth.patch
aur-eagletmt/PKGBUILDs/vagrant/: PKGBUILD
aur-eagletmt/PKGBUILDs/zabbix-agent/: PKGBUILD
aur-eagletmt/PKGBUILDs/zabbix-server/: PKGBUILD
aur-eagletmt/etc/: makepkg.i686.conf  pacman.x86_64.conf
data/: repositories.yml
etc/: makepkg.i686.conf  makepkg.x86_64.conf  pacman.i686.conf
infra/: aws.tf  main.tf  versions.tf
ruby-trunk/: .akabei.yml  .guzuta.yml  etc  update.rb
ruby-trunk/PKGBUILDs/ruby-trunk/: PKGBUILD
source/: index.html.haml  index.html.slim
source/layouts/: layout.html.haml  layout.slim
source/repository/: index.html.haml  index.html.slim
templates/: index.html  repository.html
vim-latest/: .akabei.yml  .guzuta.yml  update.rb
vim-latest/PKGBUILDs/vim-latest/: PKGBUILD  breakindent.patch  ruby21-rgengc.patch  vim-7.4.035-breakindent.patch
vim-latest/etc/: makepkg.i686.conf  makepkg.x86_64.conf
