[package]
name = "arch-wanko-cc"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
bytes = "0.6"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
futures = "0.3"
git2 = "0.13"
handlebars = "3.5"
md-5 = "0.9"
regex = "1.4"
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusoto_s3 = { version = "0.45", default-features = false, features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
tar = "0.4"
tokio = { version = "1.18", features = ["macros"] }
